[tool.poetry]
name = "emojistealer"
version = "0.1.0"
description = "Download emoji from Mastodon/Pleroma/Misskey instances and categorize them"
authors = ["knuxify <knuxify@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-cache = "^1.2.0"
requests-ratelimiter = "^0.6.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "D", "F"]
ignore = ["D212", "D203", "D205"]
